Fix Gemini 503 error, enhance RAG chat grounding & add target file inspection in Bug Investigator